--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 title: Ayush CheatSheets
 layout: sidebar
-social_media:
-  website: https://goyal.club
-  twitter: ayushg1214  
+twitter_username: ayushg1214
+email: ayushg1214@gmail.com
+github_username: ayush6624
